-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.2.0, Qt Creator 4.3.0-beta1
-
None
-
MSVC2015 release build LLVM 3.9.1
#include <QtGui> // important to make code parsing slower class Cake { void create () { } }; int main(int argc, char *argv[]) { Cake *myCake = new Cake; myCake->reatec //fast typed keys: myCake.create return 0; }
| For Gerrit Dashboard: QTCREATORBUG-17697 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 185834,2 | Clang: Fix setting cursor position after dot-arrow-correction | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |