Clang: Fix setting cursor position after dot-arrow-correction

Change-Id: I2685de00056197505c512f63f44b54b4bca81c15
Task-number: QTCREATORBUG-17697
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>